--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -3,5 +3,10 @@
     "name": "application.telegram.store",
     "type": "java.lang.String",
     "description": "A description for 'application.telegram.store'"
+  },
+  {
+    "name": "application.telegram.allowed",
+    "type": "java.lang.String",
+    "description": "A description for 'application.telegram.allowed'"
   }
 ]}
